feat: added health check function and endpoint
